
INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../../kdesrc/kdecore -I$(srcdir)/../../kdesrc \
	   $(QTOPIA_INCLUDES) $(all_includes)

noinst_LTLIBRARIES = libkpartsdropin.la

libkpartsdropin_la_SOURCES = part.cpp historyprovider.cpp browserinterface.cpp part_rw.cpp
libkpartsdropin_la_METASOURCES = AUTO


KDE_OPTIONS = qtonly
