
INCLUDES = -I$(srcdir)/../../dropin -I$(srcdir)/.. -I$(srcdir)/../kdecore \
           -I$(srcdir)/../../dropin/kparts $(QTOPIA_INCLUDES) $(all_includes)

noinst_LTLIBRARIES = libkparts.la

libkparts_la_SOURCES = event.cpp partmanager.cpp browserextension.cpp factory.cpp
libkparts_la_METASOURCES = AUTO


KDE_OPTIONS = qtonly
