# Comment out the following line if you use egcs :
CXXFLAGS=-O3 -Wall -fno-rtti -fno-exceptions -DDISABLE_NONQIMAGE_DEPTHS

noinst_LTLIBRARIES = libflash.la

libflash_la_SOURCES = flash.cc character.cc shape.cc button.cc program.cc \
	bitmap.cc displaylist.cc font.cc graphic.cc text.cc matrix.cc \
	script.cc sound.cc sprite.cc movie.cc cxform.cc adpcm.cc sqrt.cc \
	graphic16.cc graphic24.cc graphic32.cc
