if XMLUI

if LARGEICONS
icons = back.png fileprint.png forward.png gear.png gohome.png \
	images_display.png lock.png reload.png stop.png viewmag.png \
	window_list.png \
	fileopen.png filesave.png filesaveas.png \
	editcut.png editcopy.png editpaste.png undo.png redo.png
else
icons =
endif

else
icons =
endif

actiondir   = $(kde_datadir)/konq-embed/actions/big
action_DATA = $(icons)
